ci_configs/k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "pxf-cra-mongo-deployment"
spec:
  selector:
    matchLabels:
      app: "pxf-cra-mongo"
  template:
    metadata:
      labels:
        app: "pxf-cra-mongo"
    spec:
      imagePullSecrets:
        - name: gitlab-auth
      containers:
        - name: "pxf-cra-mongodb"
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          image: mongo
          ports:
            - containerPort: 27017

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: "pxf-cra-backend-deployment"
spec:
  selector:
    matchLabels:
      app: "pxf-cra-backend"
  template:
    metadata:
      labels:
        app: "pxf-cra-backend"
    spec:
      imagePullSecrets:
        - name: gitlab-auth
      containers:
        - name: "pxf-cra-mongodb"
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          image: gitlab-registry.proxym-group.net/proxym-france/proxym-compte-rendu-activite/backend:dev
          ports:
            - containerPort: 8080
