ci_configs/k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pxf-cra-mongodb
spec:
  selector:
    app: pxf-cra-mongo
  ports:
    - targetPort: 27017
      port: 27017

---
apiVersion: v1
kind: Service
metadata:
  name: pxf-cra-backend
spec:
  selector:
    app: pxf-cra-backend
  ports:
    - port: 8080
      targetPort: 8080
