ci_configs/k8s/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pxf-cra-ingress
spec:
  ingressClassName: nginx-demo
  rules:
    - host: cra-api.demo.proxym-it.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pxf-cra-backend
                port:
                  name: http
